# example-pypi

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
src/example_tjc/: main.py
