[project]
name = "example-tjc"
description = "Add a description here"
readme = "README.md"
version = "0.0.0dev0"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/threejeanchilli/example-pypi"
