[project]
name = "example-tjc"
description = "Add a description here"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling >= 1.26", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/threejeanchilli/example-pypi"

[tool.hatch.version]
source = "uv-dynamic-versioning"
